// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spin > custom indicator should work 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="ant-spin ant-spin-spinning"
>
  <div
    class="custom-indicator ant-spin-dot"
  />
</div>
`;

exports[`Spin > default indicator should render correctly 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="ant-spin ant-spin-spinning ant-spin-oceanbase ant-spin-oceanbase-gray"
>
  <div
    class="ant-spin-dot"
    style="display: inline-block;"
  >
    <svg
      height="500"
      preserveAspectRatio="xMidYMid meet"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 500 500"
      width="500"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_2"
        >
          <rect
            height="500"
            width="500"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_4"
        >
          <path
            d="M0,0 L500,0 L500,500 L0,500z"
          />
        </clippath>
        <clippath
          id="__lottie_element_8"
        >
          <path
            d="M0,0 L1920,0 L1920,1080 L0,1080z"
          />
        </clippath>
        <clippath
          id="__lottie_element_21"
        >
          <path
            d="M0,0 L1920,0 L1920,1080 L0,1080z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_2)"
      >
        <g
          clip-path="url(#__lottie_element_4)"
          opacity="1"
          style="display: block;"
          transform="matrix(1.5399999618530273,0,0,1.5399999618530273,-116.5,-135)"
        >
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(0.14900000393390656,0,0,0.14900000393390656,-60,-40.5)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,2000.0909423828125,1999.43603515625)"
            >
              <path
                d=" M-1095.5050048828125,-236.11700439453125 C-291.1889953613281,-124.90799713134766 97.28199768066406,-624.0339965820312 1095.751953125,-512.760986328125 C1095.751953125,-512.760986328125 1095.5059814453125,236.11900329589844 1095.5059814453125,236.11900329589844 C291.19000244140625,124.90899658203125 -97.28099822998047,624.0349731445312 -1095.751953125,516.39599609375 C-1095.751953125,516.39599609375 -1095.5050048828125,-236.11700439453125 -1095.5050048828125,-236.11700439453125z"
                fill="rgb(226,232,243)"
                fill-opacity="1"
              />
            </g>
          </g>
          <g
            clip-path="url(#__lottie_element_21)"
            opacity="1"
            style="display: block;"
            transform="matrix(1,0,0,1,-730.5,-260)"
          >
            <g
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,960,543)"
            >
              <g
                opacity="1"
                transform="matrix(1,0,0,1,0,0)"
              >
                <path
                  d=" M-153.4320068359375,-90.92500305175781 C-106.36900329589844,-89.91600036621094 -73.50800323486328,-88.51399993896484 -14,-109 C-9.442999839782715,-110.56900024414062 -5.0929999351501465,-112.05400085449219 -0.9039999842643738,-113.45899963378906"
                  fill-opacity="0"
                  stroke="rgb(226,232,243)"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                  stroke-opacity="1"
                  stroke-width="37"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
          </g>
          <g
            clip-path="url(#__lottie_element_8)"
            opacity="1"
            style="display: block;"
            transform="matrix(1,0,0,1,-730.5,-260)"
          >
            <g
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,960,724)"
            >
              <g
                opacity="1"
                transform="matrix(1,0,0,1,0,0)"
              >
                <path
                  d=" M17.69499969482422,-119.03099822998047 C58.11399841308594,-133.51600646972656 90.36399841308594,-143.08299255371094 170.58999633789062,-142.02000427246094"
                  fill-opacity="0"
                  stroke="rgb(226,232,243)"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                  stroke-opacity="1"
                  stroke-width="38"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Spin > gray default indicator should render correctly 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="ant-spin ant-spin-spinning ant-spin-oceanbase ant-spin-oceanbase-gray"
>
  <div
    class="ant-spin-dot"
    style="display: inline-block;"
  >
    <svg
      height="500"
      preserveAspectRatio="xMidYMid meet"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 500 500"
      width="500"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <clippath
          id="__lottie_element_37"
        >
          <rect
            height="500"
            width="500"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_39"
        >
          <path
            d="M0,0 L500,0 L500,500 L0,500z"
          />
        </clippath>
        <clippath
          id="__lottie_element_43"
        >
          <path
            d="M0,0 L1920,0 L1920,1080 L0,1080z"
          />
        </clippath>
        <clippath
          id="__lottie_element_56"
        >
          <path
            d="M0,0 L1920,0 L1920,1080 L0,1080z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_37)"
      >
        <g
          clip-path="url(#__lottie_element_39)"
          opacity="1"
          style="display: block;"
          transform="matrix(1.5399999618530273,0,0,1.5399999618530273,-116.5,-135)"
        >
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(0.14900000393390656,0,0,0.14900000393390656,-60,-40.5)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,2000.0909423828125,1999.43603515625)"
            >
              <path
                d=" M-1095.5050048828125,-236.11700439453125 C-291.1889953613281,-124.90799713134766 97.28199768066406,-624.0339965820312 1095.751953125,-512.760986328125 C1095.751953125,-512.760986328125 1095.5059814453125,236.11900329589844 1095.5059814453125,236.11900329589844 C291.19000244140625,124.90899658203125 -97.28099822998047,624.0349731445312 -1095.751953125,516.39599609375 C-1095.751953125,516.39599609375 -1095.5050048828125,-236.11700439453125 -1095.5050048828125,-236.11700439453125z"
                fill="rgb(226,232,243)"
                fill-opacity="1"
              />
            </g>
          </g>
          <g
            clip-path="url(#__lottie_element_56)"
            opacity="1"
            style="display: block;"
            transform="matrix(1,0,0,1,-730.5,-260)"
          >
            <g
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,960,543)"
            >
              <g
                opacity="1"
                transform="matrix(1,0,0,1,0,0)"
              >
                <path
                  d=" M-153.4320068359375,-90.92500305175781 C-106.36900329589844,-89.91600036621094 -73.50800323486328,-88.51399993896484 -14,-109 C-9.442999839782715,-110.56900024414062 -5.0929999351501465,-112.05400085449219 -0.9039999842643738,-113.45899963378906"
                  fill-opacity="0"
                  stroke="rgb(226,232,243)"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                  stroke-opacity="1"
                  stroke-width="37"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
          </g>
          <g
            clip-path="url(#__lottie_element_43)"
            opacity="1"
            style="display: block;"
            transform="matrix(1,0,0,1,-730.5,-260)"
          >
            <g
              opacity="1"
              style="display: block;"
              transform="matrix(1,0,0,1,960,724)"
            >
              <g
                opacity="1"
                transform="matrix(1,0,0,1,0,0)"
              >
                <path
                  d=" M17.69499969482422,-119.03099822998047 C58.11399841308594,-133.51600646972656 90.36399841308594,-143.08299255371094 170.58999633789062,-142.02000427246094"
                  fill-opacity="0"
                  stroke="rgb(226,232,243)"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                  stroke-opacity="1"
                  stroke-width="38"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
            <g
              style="display: none;"
            >
              <g>
                <path
                  fill-opacity="0"
                  stroke-linecap="butt"
                  stroke-linejoin="miter"
                  stroke-miterlimit="4"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
